add partials and browsersync

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Guilherme Santos</title>
 </head>
 <body>
+    <header>
+        <div class="container">
 
+        </div>
+    </header>
 </body>
 </html>
