--- a/index.html
+++ b/index.html
@@ -1,17 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="dist/styles/main.css">
-    <title>Guilherme Santos</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" href="dist/styles/main.css">
+	<title>Guilherme Santos</title>
 </head>
 <body>
-    <header>
-        <div class="container">
+	<header>	
+		<nav class="navbar">
+			<div class="navbar__nav">
+				<a href="#">@guilherme-dev</a>
+				<button class="navbar__button">
+					<span></span>
+					<span></span>
+					<span></span>
+				</button>
+			</div>
+			<div class="navbar__menu">
+				<ul>
+					<li class="li">Work</li>
+					<li class="li">About</li>
+					<li class="li">Contact</li>
+				</ul>
+			</div>
+		</nav>
 
-        </div>
-    </header>
+		<div class="headline">
+			<div class="container">
+				<!-- TODO: insert Atom animation -->
+				<h1>Guilherme Santos</h1>
+				<p>Bacharel em Ciência da Computação e Desenvolvedor Web</p>
+			</div>
+		</div>
+	</header>
+	<section id="section-work">
+		<div class="container">
+			<h1>Work</h1>
+		</div>
+	</section>
+	<section id="section-about">
+		<div class="container">
+			<h1>About Me</h1>
+		</div>
+	</section>
+	<section id="section-contact">
+		<div class="container">
+			<h1>Contact me</h1>
+		</div>
+	</section>
+	<footer>
+		
+	</footer>
+	<script src="dist/scripts/scripts.min.js"></script>
 </body>
 </html>
