navbar and navbar__button

--- a/index.html
+++ b/index.html
@@ -11,18 +11,19 @@
 	<header>	
 		<nav class="navbar">
 			<div class="navbar__nav">
-				<a href="#">@guilherme-dev</a>
-				<button class="navbar__button">
-					<span></span>
-					<span></span>
-					<span></span>
+				<a href="#" class="navbar__brand">@guilherme-dev</a>
+				<button class="navbar__button" type="button">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
 				</button>
 			</div>
 			<div class="navbar__menu">
 				<ul>
-					<li class="li">Work</li>
-					<li class="li">About</li>
-					<li class="li">Contact</li>
+					<li><a href="#">Work</a></li>
+					<li><a href="#">About</a></li>
+					<li><a href="#">Contact</a></li>
 				</ul>
 			</div>
 		</nav>
