menu dropdown e headline

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<div class="container">
 				<!-- TODO: insert Atom animation -->
 				<h1>Guilherme Santos</h1>
-				<p>Bacharel em Ciência da Computação e Desenvolvedor Web</p>
+				<h2>Bachelor of Science in Computer Science and web developer</h2>
 			</div>
 		</div>
 	</header>
@@ -54,6 +54,7 @@
 	<footer>
 		
 	</footer>
+	<script src="http://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
 	<script src="dist/scripts/scripts.min.js"></script>
 </body>
 </html>
