--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
 		<div class="headline">
 			<div class="container">
+				<h1>/* in development */</h1>
 				<!-- TODO: insert Atom animation -->
 				<h1>Guilherme Santos</h1>
 				<h2>Bachelor of Science in Computer Science and web developer</h2>
