started grid for portfolio items

--- a/index.html
+++ b/index.html
@@ -37,23 +37,45 @@
 			</div>
 		</div>
 	</header>
-	<section id="section-work">
+	<section id="section-work" class="section">
 		<div class="container">
 			<h1>Work</h1>
+
+			<div class="row">
+				<div class="row__item work-item">
+					<figure>
+						<img src="dist/img/computer.png" alt="">
+						<figcaption>
+							<p class="work-item__title">Title</p>
+							<p class="work-item__tags">tags</p>
+							<p class="work-item__desc">description</p>
+							<button>Code</button>
+							<button>Demo</button>
+						</figcaption>
+					</figure>
+				</div>
+			</div>
 		</div>
 	</section>
-	<section id="section-about">
+	<section id="section-about" class="section">
 		<div class="container">
 			<h1>About Me</h1>
 		</div>
 	</section>
-	<section id="section-contact">
+	<section id="section-contact" class="section">
 		<div class="container">
 			<h1>Contact me</h1>
 		</div>
 	</section>
 	<footer>
-		
+		<div class="container">
+			<secton id="section-contact-info" class="section">
+				<div class="social-media">
+					<h2>Social Media</h2>
+					
+				</div>
+			</secton>
+		</div>
 	</footer>
 	<script src="http://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
 	<script src="dist/scripts/scripts.min.js"></script>
