add futuraBT-medium, add style for work-item

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 			</div>
 			<div class="navbar__menu">
 				<ul>
-					<li><a href="#">Work</a></li>
-					<li><a href="#">About</a></li>
-					<li><a href="#">Contact</a></li>
+					<li><a href="#" class="link">Work</a></li>
+					<li><a href="#" class="link">About</a></li>
+					<li><a href="#" class="link">Contact</a></li>
 				</ul>
 			</div>
 		</nav>
@@ -46,11 +46,13 @@
 					<figure>
 						<img src="dist/img/computer.png" alt="">
 						<figcaption>
-							<p class="work-item__title">Title</p>
-							<p class="work-item__tags">tags</p>
-							<p class="work-item__desc">description</p>
-							<button>Code</button>
-							<button>Demo</button>
+							<h3 class="work-item__title">Title</h3>
+							<ul class="work-item__tags">
+								<li>HTML5, CSS3</li>
+							</ul>
+							<p class="work-item__desc">description Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est magnam eveniet.</p>
+							<a href="#" class="work-item__link">Code</a>
+							<a href="#" class="work-item__link">Demo</a>
 						</figcaption>
 					</figure>
 				</div>
