--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
 <body>
 	<header>	
 		<nav class="navbar">
-			<div class="navbar__nav">
-				<a href="#" class="navbar__brand">@guilherme-dev</a>
-				<button class="navbar__button" type="button">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
+			<div class="container">
+				<div class="navbar__nav">
+					<a href="#" class="navbar__brand">@guilherme-dev</a>
+					<button class="navbar__button" type="button">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+				</div>
 			</div>
 			<div class="navbar__menu">
 				<ul>
@@ -42,6 +44,34 @@
 			<h1>Work</h1>
 
 			<div class="row">
+				<div class="row__item work-item">
+					<figure>
+						<img src="dist/img/computer.png" alt="">
+						<figcaption>
+							<h3 class="work-item__title">Title</h3>
+							<ul class="work-item__tags">
+								<li>HTML5, CSS3</li>
+							</ul>
+							<p class="work-item__desc">description Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est magnam eveniet.</p>
+							<a href="#" class="work-item__link">Code</a>
+							<a href="#" class="work-item__link">Demo</a>
+						</figcaption>
+					</figure>
+				</div>
+				<div class="row__item work-item">
+					<figure>
+						<img src="dist/img/computer.png" alt="">
+						<figcaption>
+							<h3 class="work-item__title">Title</h3>
+							<ul class="work-item__tags">
+								<li>HTML5, CSS3</li>
+							</ul>
+							<p class="work-item__desc">description Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est magnam eveniet.</p>
+							<a href="#" class="work-item__link">Code</a>
+							<a href="#" class="work-item__link">Demo</a>
+						</figcaption>
+					</figure>
+				</div>
 				<div class="row__item work-item">
 					<figure>
 						<img src="dist/img/computer.png" alt="">
