--- a/index.html
+++ b/index.html
@@ -92,6 +92,12 @@
 	<section id="section-about" class="section">
 		<div class="container">
 			<h1>About Me</h1>
+			<div class="about-me">
+				<figure>
+					<img src="dist/img/perfil.jpg" alt="">
+				</figure>
+				<p class="about-me__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia repellendus eveniet harum incidunt ea exercitationem, laudantium fuga explicabo fugit et rem! Mollitia, soluta illum odio. Debitis, eum beatae inventore aperiam!</p>
+			</div>
 		</div>
 	</section>
 	<section id="section-contact" class="section">
