add link to resume

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 					<p>Sou Bacharel em Ciência da Computação pela Universidade Federal do Paraná, me graduei em 2017 e no momento trabalho como desenvolvedor web freelancer. Possuo experiência com tecnologias como PHP, Javascritp, HTML5, CSS3 / SASS.</p> 
 					<p>Comecei minha carreira profissional ainda durante a graduação, quando fiz parte da Ecomp - Empresa Júnior de Informática da UFPR - onde trabalhei como assessor de projetos em 2015 e diretor de projetos em 2016. Durante o segundo semestre de 2016 comecei a estagiar na Agência Mirum como desenvolvedor frontend. Neste período participei do desenvolvimento de sites para clientes como Listerine, Porto Seguro e Cyrela. </p>
 					<p>Tenho interesse em tecnologias Javascript como Node, React e Vuejs. Além disso, sou entusiasta de Machine Learning, Blockchain e suas aplicações.</p>
+					<p><a href="/resume/GuilhermeSantos.pdf" target="_blank" class="link" rel="external">Meu currículo</a></p>
 				</div>
 			</div>
 		</div>
