add matriz inversa to portfolio

--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
 			<div class="row">
 				<div class="row__item work-item">
 					<figure>
-						<img src="dist/img/computer.png" alt="Imagem ilustrativa do projeto" title="Ícone minimalista de um computador.">
+						<img src="dist/img/computer.png" alt="Imagem ilustrativa do projeto" title="Scrrenshot do cabeçalho da documentação do projeto">
 						<figcaption>
-							<h3 class="work-item__title">Title</h3>
+							<h3 class="work-item__title">Matriz inversa</h3>
 							<ul class="work-item__tags">
-								<li>HTML5, CSS3</li>
+								<li>C, AVX, otimização de desempenho</li>
 							</ul>
-							<p class="work-item__desc">description Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est magnam eveniet.</p>
-							<a href="#" class="work-item__link" target="_blank" rel="external" >Código</a>
-							<a href="#" class="work-item__link" target="_blank" rel="external" >Demo</a>
+							<p class="work-item__desc">Algoritmo que calcula a inversa de uma matriz, utilizando fatoração LU e refinamento sucessivo.</p>
+							<a href="https://github.com/guilherme-dev/matriz_inversa" class="work-item__link" target="_blank" rel="external" >Código</a>
+							<!-- <a href="#" class="work-item__link" target="_blank" rel="external" >Demo</a> -->
 						</figcaption>
 					</figure>
 				</div>
