added Library project

--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
 					<figure>
 						<img src="dist/img/computer.png" alt="Imagem ilustrativa do projeto" title="Ícone minimalista de um computador.">
 						<figcaption>
-							<h3 class="work-item__title">Title</h3>
+							<h3 class="work-item__title">Javascript Library</h3>
 							<ul class="work-item__tags">
-								<li>HTML5, CSS3</li>
+								<li>HTML5, CSS3, Javascript, Design Patterns</li>
 							</ul>
-							<p class="work-item__desc">description Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est magnam eveniet.</p>
-							<a href="#" class="work-item__link" target="_blank" rel="external" >Código</a>
-							<a href="#" class="work-item__link" target="_blank" rel="external" >Demo</a>
+							<p class="work-item__desc">Uma aplicação simples feita em Javascript para adicionar e remover livros de um catálogo.</p>
+							<a href="https://github.com/guilherme-dev/library" class="work-item__link" target="_blank" rel="external" >Código</a>
+							<a href="https://guilherme-dev.github.io/library/" class="work-item__link" target="_blank" rel="external" >Demo</a>
 						</figcaption>
 					</figure>
 				</div>
@@ -152,7 +152,11 @@
 							<a href="https://www.linkedin.com/in/guilherme-dev" class="link" target="_blank" title="Meu perfil no linkedin" rel="external"><span class="fab fa-linkedin"></span></a>
 						</li>
 					</ul>
+					
 			</secton>
+		</div>
+		<div class="footer-bottom">
+			<span><a href="https://github.com/guilherme-dev/guilherme-dev.github.io" class="link" target="_blank" rel="external">Código deste site</a></span>
 		</div>
 	</footer>
 	<script src="http://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
