--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 				</div>
 				<div class="row__item work-item">
 					<figure>
-						<img src="dist/img/computer.png" alt="Imagem ilustrativa do projeto" title="Ícone minimalista de um computador.">
+						<img src="dist/img/work2.jpg" alt="Imagem ilustrativa do projeto" title="Ícone minimalista de um computador.">
 						<figcaption>
-							<h3 class="work-item__title">Javascript Library</h3>
+							<h3 class="work-item__title">Library</h3>
 							<ul class="work-item__tags">
 								<li>HTML5, CSS3, Javascript, Design Patterns</li>
 							</ul>
