change projects order

--- a/index.html
+++ b/index.html
@@ -48,6 +48,20 @@
 			<div class="row">
 				<div class="row__item work-item">
 					<figure>
+						<img src="dist/img/work2.jpg" alt="Imagem ilustrativa do projeto" title="Ícone minimalista de um computador.">
+						<figcaption>
+							<h3 class="work-item__title">Library</h3>
+							<ul class="work-item__tags">
+								<li>HTML5, CSS3, JS, Design Patterns, ES6</li>
+							</ul>
+							<p class="work-item__desc">Uma aplicação simples feita em Javascript para adicionar e remover livros de um catálogo.</p>
+							<a href="https://github.com/guilherme-dev/library" class="work-item__link" target="_blank" rel="external" >Código</a>
+							<a href="https://guilherme-dev.github.io/library/" class="work-item__link" target="_blank" rel="external" >Demo</a>
+						</figcaption>
+					</figure>
+				</div>
+				<div class="row__item work-item">
+					<figure>
 						<img src="dist/img/computer.png" alt="Imagem ilustrativa do projeto" title="Scrrenshot do cabeçalho da documentação do projeto">
 						<figcaption>
 							<h3 class="work-item__title">Matriz inversa</h3>
@@ -60,21 +74,7 @@
 						</figcaption>
 					</figure>
 				</div>
-				<div class="row__item work-item">
-					<figure>
-						<img src="dist/img/work2.jpg" alt="Imagem ilustrativa do projeto" title="Ícone minimalista de um computador.">
-						<figcaption>
-							<h3 class="work-item__title">Library</h3>
-							<ul class="work-item__tags">
-								<li>HTML5, CSS3, Javascript, Design Patterns</li>
-							</ul>
-							<p class="work-item__desc">Uma aplicação simples feita em Javascript para adicionar e remover livros de um catálogo.</p>
-							<a href="https://github.com/guilherme-dev/library" class="work-item__link" target="_blank" rel="external" >Código</a>
-							<a href="https://guilherme-dev.github.io/library/" class="work-item__link" target="_blank" rel="external" >Demo</a>
-						</figcaption>
-					</figure>
-				</div>
-				<div class="row__item work-item">
+				<!-- <div class="row__item work-item">
 					<figure>
 						<img src="dist/img/computer.png" alt="Imagem ilustrativa do projeto" title="Ícone minimalista de um computador.">
 						<figcaption>
@@ -87,7 +87,7 @@
 							<a href="#" class="work-item__link" target="_blank" rel="external" >Demo</a>
 						</figcaption>
 					</figure>
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</section>
