--- a/index.html
+++ b/index.html
@@ -48,7 +48,21 @@
 			<div class="row">
 				<div class="row__item work-item">
 					<figure>
-						<img src="dist/img/work2.jpg" alt="Imagem ilustrativa do projeto" title="Ícone minimalista de um computador.">
+						<img src="dist/img/react.png" alt="Imagem ilustrativa do projeto" title="Ícone minimalista de um computador.">
+						<figcaption>
+							<h3 class="work-item__title">Videos App</h3>
+							<ul class="work-item__tags">
+								<li>React, HTML5, CSS3</li>
+							</ul>
+							<p class="work-item__desc">Uma página criada em React que consome a API do youtube para busca e exibição de videos.</p>
+							<a href="https://github.com/guilherme-dev/videos-app/tree/develop" class="work-item__link" target="_blank" rel="external" >Código</a>
+							<!-- <a href="#" class="work-item__link" target="_blank" rel="external" >Demo</a> -->
+						</figcaption>
+					</figure>
+				</div>
+				<div class="row__item work-item">
+					<figure>
+						<img src="dist/img/work2.jpg" alt="Imagem ilustrativa do projeto" title="Logo Javascript">
 						<figcaption>
 							<h3 class="work-item__title">Library</h3>
 							<ul class="work-item__tags">
@@ -74,20 +88,6 @@
 						</figcaption>
 					</figure>
 				</div>
-				<!-- <div class="row__item work-item">
-					<figure>
-						<img src="dist/img/computer.png" alt="Imagem ilustrativa do projeto" title="Ícone minimalista de um computador.">
-						<figcaption>
-							<h3 class="work-item__title">Title</h3>
-							<ul class="work-item__tags">
-								<li>HTML5, CSS3</li>
-							</ul>
-							<p class="work-item__desc">description Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est magnam eveniet.</p>
-							<a href="#" class="work-item__link" target="_blank" rel="external" >Código</a>
-							<a href="#" class="work-item__link" target="_blank" rel="external" >Demo</a>
-						</figcaption>
-					</figure>
-				</div> -->
 			</div>
 		</div>
 	</section>
