--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 							<ul class="work-item__tags">
 								<li>React, HTML5, CSS3</li>
 							</ul>
-							<p class="work-item__desc">Uma página criada em React que consome a API do youtube para busca e exibição de videos.</p>
+							<p class="work-item__desc">Meu primeiro projeto usando React, feito para estudar o framework. Consome a API do youtube para busca e exibição de videos.</p>
 							<a href="https://github.com/guilherme-dev/videos-app/tree/develop" class="work-item__link" target="_blank" rel="external" >Código</a>
-							<!-- <a href="#" class="work-item__link" target="_blank" rel="external" >Demo</a> -->
+							<a href="https://guilherme-dev.github.io/videos-app/" class="work-item__link" target="_blank" rel="external" >Demo</a>
 						</figcaption>
 					</figure>
 				</div>
@@ -68,7 +68,7 @@
 							<ul class="work-item__tags">
 								<li>HTML5, CSS3, JS, Design Patterns, ES6</li>
 							</ul>
-							<p class="work-item__desc">Uma aplicação simples feita em Javascript para adicionar e remover livros de um catálogo.</p>
+							<p class="work-item__desc">Uma aplicação simples feita em Javascript para adicionar e remover livros de um catálogo, criada enquanto estudava Factory e Module Pattern. </p>
 							<a href="https://github.com/guilherme-dev/library" class="work-item__link" target="_blank" rel="external" >Código</a>
 							<a href="https://guilherme-dev.github.io/library/" class="work-item__link" target="_blank" rel="external" >Demo</a>
 						</figcaption>
@@ -80,9 +80,9 @@
 						<figcaption>
 							<h3 class="work-item__title">Matriz inversa</h3>
 							<ul class="work-item__tags">
-								<li>C, AVX, otimização de desempenho</li>
+								<li>C, AVX, Otimização de desempenho</li>
 							</ul>
-							<p class="work-item__desc">Algoritmo que calcula a inversa de uma matriz, utilizando fatoração LU e refinamento sucessivo.</p>
+							<p class="work-item__desc">Trabalho de uma disciplina da graduação que calcula a inversa de uma matriz, utilizando fatoração LU e refinamento sucessivo.</p>
 							<a href="https://github.com/guilherme-dev/matriz_inversa" class="work-item__link" target="_blank" rel="external" >Código</a>
 							<!-- <a href="#" class="work-item__link" target="_blank" rel="external" >Demo</a> -->
 						</figcaption>
