added atom animation

--- a/index.html
+++ b/index.html
@@ -31,11 +31,23 @@
 			</div>
 			
 		</nav>
-
+		<div class="atom">
+			<div class="orbit orbit--one">
+				<div class="eletron"></div>
+			</div>
+			<div class="orbit orbit--two">
+				<div class="eletron"></div>
+			</div>
+			<div class="orbit orbit--three">
+				<div class="eletron"></div>
+			</div>
+			<div class="orbit orbit--four">
+				<div class="eletron"></div>
+			</div>
+		</div>
 		<div class="headline">
 			<div class="container">
 				<h1>/* in development */</h1>
-				<!-- TODO: insert Atom animation -->
 				<h1>Guilherme Santos</h1>
 				<h2>Bacharel em Ciência da Computação e desenvolvedor web</h2>
 			</div>
